# anomer-backend

./: .env.example  .gitignore  README.md  env_creator.py  main.py  pyproject.toml
src/security/: hashing_encoding.py  tokens.py
src/settings/: __init__.py  api.py  app.py  db.py  mail.py  model_config.py  redis.py  security.py  server.py
