[project]
name = "anomer-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosmtplib>=4.0.2",
    "bcrypt>=5.0.0",
    "databases>=0.9.0",
    "fastapi>=0.124.4",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.38.0",
]
